# riichi_mahjong_league_table

./: README.md  main.py  pyproject.toml
